Quick fix for sidebar content overflowing onto content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -268,7 +268,7 @@ code {
  * Course and blog sidebar
  **/
 .sidebar {
-    margin-left: 4em;
+    margin-left: 1em;
     margin-top: 1em;
     position: absolute;
     max-width: 25%;
